--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "reflect-metadata": "^0.2.0",
+    "resend": "^3.2.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
