--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.2.0",
     "resend": "^3.2.0",
     "rxjs": "^7.8.1"
