--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mkdirp": "^3.0.1",
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.2.0",
     "resend": "^3.2.0",
